--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 </li>
             </ul>
         </nav>
-        <div class="in_up">
-            <button class="signin">Sign In</button>
-            <button class="signup">Sign Up</button>
+        <div class="in__up">
+            <a href="#" class="signin btn">Sign In</a>
+            <a href="#" class="signup btn">Sign Up</a>
         </div>
     </header>
 </body>
