--- a/index.html
+++ b/index.html
@@ -40,5 +40,21 @@
             <a href="#" class="signup btn">Sign Up</a>
         </div>
     </header>
+    <main>
+        <section class="getting">
+            <div class="getting_content">
+                <h1>
+                    Want anything to be easy with <b>LaslesVPN.</b>
+                </h1>
+                <p>
+                    Provide a network for all your needs with ease and fun using <b>LaslesVPN</b> discover interesting features from us.
+                </p>
+                <a href="#" class="btn">Get Started</a>
+            </div>
+            <div class="getting_img">
+                <img src="./assets/img/studyman1.png" alt="study">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
