--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
                 <img src="./assets/img/studyman1.png" alt="study">
             </div>
         </section>
+        <section class="infor">
+            <div class="item">
+                <img src="./assets/img/icon1.png" alt="icon" class="item_icon">
+                <div class="item_content">
+                    <p><b>90+</b></p>
+                    <p>User</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/img/icon2.png" alt="icon" class="item_icon">
+                <div class="item_content">
+                    <p><b>30+</b></p>
+                    <p>Locations</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/img/icon3.png" alt="icon" class="item_icon">
+                <div class="item_content">
+                    <p><b>50+</b></p>
+                    <p>Server</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
