--- a/index.html
+++ b/index.html
@@ -78,6 +78,25 @@
                 </div>
             </div>
         </section>
+        <section class="feature">
+            <img src="./assets/img/studyman2.png" alt="study">
+            <div class="feature__content">
+                <h3>We Provide Many Features You Can Use</h3>
+                <p>You can explore the features that we provide with fun and have their own functions each feature.</p>
+                <ul class="feature__content--list">
+                    <li>
+                        Powerfull online protection.
+                    </li>
+                    <li>
+                        Internet without borders.
+                    </li>
+                    <li>
+                        Supercharged VPN
+                    </li>
+                    <li>No specific time limits.</li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
