--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </ul>
         </nav>
         <div class="in__up">
-            <a href="#" class="signin btn">Sign In</a>
-            <a href="#" class="signup btn">Sign Up</a>
+            <a href="#" class="signin btn hover-bg">Sign In</a>
+            <a href="#" class="pink__btn btn hover-bg">Sign Up</a>
         </div>
     </header>
     <main>
@@ -46,10 +46,10 @@
                 <h1>
                     Want anything to be easy with <b>LaslesVPN.</b>
                 </h1>
-                <p>
+                <p class="p1">
                     Provide a network for all your needs with ease and fun using <b>LaslesVPN</b> discover interesting features from us.
                 </p>
-                <a href="#" class="btn">Get Started</a>
+                <a href="#" class="btn hover-shadow">Get Started</a>
             </div>
             <div class="getting_img">
                 <img src="./assets/img/studyman1.png" alt="study">
@@ -81,20 +81,56 @@
         <section class="feature">
             <img src="./assets/img/studyman2.png" alt="study">
             <div class="feature__content">
-                <h3>We Provide Many Features You Can Use</h3>
-                <p>You can explore the features that we provide with fun and have their own functions each feature.</p>
+                <h2>We Provide Many Features You Can Use</h2>
+                <p class="p1">You can explore the features that we provide with fun and have their own functions each feature.</p>
                 <ul class="feature__content--list">
-                    <li>
-                        Powerfull online protection.
-                    </li>
-                    <li>
-                        Internet without borders.
-                    </li>
-                    <li>
-                        Supercharged VPN
-                    </li>
+                    <li>Powerfull online protection.</li>
+                    <li>Internet without borders.</li>
+                    <li>Supercharged VPN</li>
                     <li>No specific time limits.</li>
                 </ul>
+            </div>
+        </section>
+        <section class="plan">
+            <h3>Choose Your Plan</h3>
+            <p class="p1">Let's choose the package that is best for you and explore it happily and cheerfully.</p>
+            <div class="plan__list">
+                <div class="plan__list--item">
+                    <img src="./assets/img/plan.png" alt="plan">
+                    <h3>Free Plan</h3>
+                    <ul>
+                        <li>Unlimited Bandwitch</li>
+                        <li>Encrypted Connection</li>
+                        <li>No Traffic Logs</li>
+                        <li>Works on All Devices</li>
+                    </ul>
+                    <p>Free</p>
+                    <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
+                </div>
+                <div class="plan__list--item">
+                    <img src="./assets/img/plan.png" alt="plan">
+                    <h3>Standard Plan</h3>
+                    <ul>
+                        <li>Unlimited Bandwitch</li>
+                        <li>Encrypted Connection</li>
+                        <li>No Traffic Logs</li>
+                        <li>Works on All Devices</li>
+                    </ul>
+                    <p>$9 / mo</p>
+                    <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
+                </div>
+                <div class="plan__list--item">
+                    <img src="./assets/img/plan.png" alt="plan">
+                    <h3>Premium Plan</h3>
+                    <ul>
+                        <li>Unlimited Bandwitch</li>
+                        <li>Encrypted Connection</li>
+                        <li>No Traffic Logs</li>
+                        <li>Works on All Devices</li>
+                    </ul>
+                    <p>$12 / mo</p>
+                    <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
+                </div>
             </div>
         </section>
     </main>
