--- a/index.html
+++ b/index.html
@@ -41,97 +41,101 @@
         </div>
     </header>
     <main>
-        <section class="getting">
-            <div class="getting_content">
-                <h1>
-                    Want anything to be easy with <b>LaslesVPN.</b>
-                </h1>
-                <p class="p1">
-                    Provide a network for all your needs with ease and fun using <b>LaslesVPN</b> discover interesting features from us.
-                </p>
-                <a href="#" class="btn hover-shadow">Get Started</a>
-            </div>
-            <div class="getting_img">
-                <img src="./assets/img/studyman1.png" alt="study">
-            </div>
-        </section>
-        <section class="infor">
-            <div class="item">
-                <img src="./assets/img/icon1.png" alt="icon" class="item_icon">
-                <div class="item_content">
-                    <p><b>90+</b></p>
-                    <p>User</p>
+        <section class="top_main">
+            <section class="getting">
+                <div class="getting_content">
+                    <h1>
+                        Want anything to be easy with <b>LaslesVPN.</b>
+                    </h1>
+                    <p class="p1">
+                        Provide a network for all your needs with ease and fun using <b>LaslesVPN</b> discover interesting features from us.
+                    </p>
+                    <a href="#" class="btn hover-shadow">Get Started</a>
                 </div>
-            </div>
-            <div class="item">
-                <img src="./assets/img/icon2.png" alt="icon" class="item_icon">
-                <div class="item_content">
-                    <p><b>30+</b></p>
-                    <p>Locations</p>
+                <div class="getting_img">
+                    <img src="./assets/img/studyman1.png" alt="study">
                 </div>
-            </div>
-            <div class="item">
-                <img src="./assets/img/icon3.png" alt="icon" class="item_icon">
-                <div class="item_content">
-                    <p><b>50+</b></p>
-                    <p>Server</p>
+            </section>
+            <section class="infor">
+                <div class="item">
+                    <img src="./assets/img/icon1.png" alt="icon" class="item_icon">
+                    <div class="item_content">
+                        <p><b>90+</b></p>
+                        <p>User</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <section class="feature">
-            <img src="./assets/img/studyman2.png" alt="study">
-            <div class="feature__content">
-                <h2>We Provide Many Features You Can Use</h2>
-                <p class="p1">You can explore the features that we provide with fun and have their own functions each feature.</p>
-                <ul class="feature__content--list">
-                    <li>Powerfull online protection.</li>
-                    <li>Internet without borders.</li>
-                    <li>Supercharged VPN</li>
-                    <li>No specific time limits.</li>
-                </ul>
-            </div>
-        </section>
-        <section class="plan">
-            <h3>Choose Your Plan</h3>
-            <p class="p1">Let's choose the package that is best for you and explore it happily and cheerfully.</p>
-            <div class="plan__list">
-                <div class="plan__list--item">
-                    <img src="./assets/img/plan.png" alt="plan">
-                    <h3>Free Plan</h3>
-                    <ul>
-                        <li>Unlimited Bandwitch</li>
-                        <li>Encrypted Connection</li>
-                        <li>No Traffic Logs</li>
-                        <li>Works on All Devices</li>
+                <div class="item">
+                    <img src="./assets/img/icon2.png" alt="icon" class="item_icon">
+                    <div class="item_content">
+                        <p><b>30+</b></p>
+                        <p>Locations</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./assets/img/icon3.png" alt="icon" class="item_icon">
+                    <div class="item_content">
+                        <p><b>50+</b></p>
+                        <p>Server</p>
+                    </div>
+                </div>
+            </section>
+            <section class="feature">
+                <img src="./assets/img/studyman2.png" alt="study">
+                <div class="feature__content">
+                    <h2>We Provide Many Features You Can Use</h2>
+                    <p class="p1">You can explore the features that we provide with fun and have their own functions each feature.</p>
+                    <ul class="feature__content--list">
+                        <li>Powerfull online protection.</li>
+                        <li>Internet without borders.</li>
+                        <li>Supercharged VPN</li>
+                        <li>No specific time limits.</li>
                     </ul>
-                    <p>Free</p>
-                    <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
                 </div>
-                <div class="plan__list--item">
-                    <img src="./assets/img/plan.png" alt="plan">
-                    <h3>Standard Plan</h3>
-                    <ul>
-                        <li>Unlimited Bandwitch</li>
-                        <li>Encrypted Connection</li>
-                        <li>No Traffic Logs</li>
-                        <li>Works on All Devices</li>
-                    </ul>
-                    <p>$9 / mo</p>
-                    <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
+            </section>
+        </section>
+        <section class="bottom_main">
+            <section class="plan">
+                <h2>Choose Your Plan</h2>
+                <p class="p1">Let's choose the package that is best for you and explore it happily and cheerfully.</p>
+                <div class="plan__list">
+                    <div class="plan__list--item">
+                        <img src="./assets/img/plan.png" alt="plan">
+                        <h3>Free Plan</h3>
+                        <ul>
+                            <li>Unlimited Bandwitch</li>
+                            <li>Encrypted Connection</li>
+                            <li>No Traffic Logs</li>
+                            <li>Works on All Devices</li>
+                        </ul>
+                        <p>Free</p>
+                        <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
+                    </div>
+                    <div class="plan__list--item">
+                        <img src="./assets/img/plan.png" alt="plan">
+                        <h3>Standard Plan</h3>
+                        <ul>
+                            <li>Unlimited Bandwitch</li>
+                            <li>Encrypted Connection</li>
+                            <li>No Traffic Logs</li>
+                            <li>Works on All Devices</li>
+                        </ul>
+                        <p>$9 / mo</p>
+                        <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
+                    </div>
+                    <div class="plan__list--item">
+                        <img src="./assets/img/plan.png" alt="plan">
+                        <h3>Premium Plan</h3>
+                        <ul>
+                            <li>Unlimited Bandwitch</li>
+                            <li>Encrypted Connection</li>
+                            <li>No Traffic Logs</li>
+                            <li>Works on All Devices</li>
+                        </ul>
+                        <p>$12 / mo</p>
+                        <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
+                    </div>
                 </div>
-                <div class="plan__list--item">
-                    <img src="./assets/img/plan.png" alt="plan">
-                    <h3>Premium Plan</h3>
-                    <ul>
-                        <li>Unlimited Bandwitch</li>
-                        <li>Encrypted Connection</li>
-                        <li>No Traffic Logs</li>
-                        <li>Works on All Devices</li>
-                    </ul>
-                    <p>$12 / mo</p>
-                    <a href="#" class="pink__btn btn hover-shadow hover-bg">Select</a>
-                </div>
-            </div>
+            </section>
         </section>
     </main>
 </body>
