--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
                     </div>
                 </div>
             </section>
+            <section class="network">
+                <h2>Huge Global Network of Fast VPN</h2>
+                <p class="p1">See <b>LaslesVPN</b> everywhere to make it easier for you when you move locations.</p>
+                <img src="./assets/img/map.png" alt="map" class="map">
+            </section>
         </section>
     </main>
 </body>
