--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
                 <p class="p1">See <b>LaslesVPN</b> everywhere to make it easier for you when you move locations.</p>
                 <img src="./assets/img/map.png" alt="map" class="map">
             </section>
+            <section class="connection">
+                <img src="./assets/img/plan1.png" alt="plan">
+                <img src="./assets/img/plan2.png" alt="plan">
+                <img src="./assets/img/plan3.png" alt="plan">
+                <img src="./assets/img/plan4.png" alt="plan">
+                <img src="./assets/img/plan5.png" alt="plan">
+            </section>
         </section>
     </main>
 </body>
