--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#" class="pink__btn btn hover-bg">Sign Up</a>
         </div>
     </header>
-    <main>
+    <main class="main">
         <section class="top_main">
             <section class="getting">
                 <div class="getting_content">
@@ -148,7 +148,70 @@
                 <img src="./assets/img/plan4.png" alt="plan">
                 <img src="./assets/img/plan5.png" alt="plan">
             </section>
+            <section class="customer">
+                <h2>Trusted by Thousands of Happy Customer</h2>
+                <p class="p1">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
+                <div class="customer__comment">
+                    <div class="customer__comment--item">
+                        <div class="customer__comment--item_infor">
+                            <img src="./assets/img/avt1.png" alt="avt">
+                            <div class="name">
+                                <h3>Viezh Robert</h3>
+                                <p>Warsaw, Poland</p>
+                            </div>
+                            <div class="rate">
+                                4.5
+                                <img src="./assets/img/star.png" alt="star">
+                            </div>
+                        </div>
+                        <div class="customer__comment--item_cmt">
+                            “Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.
+                        </div>
+                    </div>
+                    <div class="customer__comment--item">
+                        <div class="customer__comment--item_infor">
+                            <img src="./assets/img/avt2.png" alt="avt">
+                            <div class="name">
+                                <h3>Yessica Christy</h3>
+                                <p>Shanxi, China</p>
+                            </div>
+                            <div class="rate">
+                                4.5
+                                <img src="./assets/img/star.png" alt="star">
+                            </div>
+                        </div>
+                        <div class="customer__comment--item_cmt">
+                            “I like it because I like to travel far and still can connect with high speed.”.
+                        </div>
+                    </div>
+                    <div class="customer__comment--item">
+                        <div class="customer__comment--item_infor">
+                            <img src="./assets/img/avt1.png" alt="avt">
+                            <div class="name">
+                                <h3>Kim Young Jou</h3>
+                                <p>Seoul, South Korea</p>
+                            </div>
+                            <div class="rate">
+                                4.5
+                                <img src="./assets/img/star.png" alt="star">
+                            </div>
+                        </div>
+                        <div class="customer__comment--item_cmt">
+                            “This is very unusual for my business that currently requires a virtual private network that has high security.”.
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="banner">
+                <div class="sub">
+                    <h2>Subscribe Now for Get Special Features!</h2>
+                    <p class="p1">Let's subscribe with us and find the fun.</p>
+                </div>
+                <a href="#" class="btn hover-shadow">Subscribe Now</a>
+            </section>
         </section>
+        <footer class="footer">
+        </footer>
     </main>
 </body>
 </html>
