--- a/index.html
+++ b/index.html
@@ -211,6 +211,44 @@
             </section>
         </section>
         <footer class="footer">
+            <section class="footer__contact">
+                <div class="logo">
+                    <img src="./assets/img/logo.png" alt="logo">
+                    <p>LaslesVPN</p>
+                </div>
+                <p class="p1">
+                    <b>LaslesVPN</b> is a private virtual network that has unique features and has high security.
+                </p>
+                <div class="footer__icons">
+                    <img src="./assets/img/icon1.png" alt="icon">
+                    <img src="./assets/img/icon2.png" alt="icon">
+                    <img src="./assets/img/icon3.png" alt="icon">
+                </div>
+                <p class="p1">©2020Lasles<b>VPN</b></p>
+            </section>
+            <ul>
+                <li><h3>Product</h3></li>
+                <li><p>Download</p></li>
+                <li><p>Pricing</p></li>
+                <li><p>Locations</p></li>
+                <li><p>Server</p></li>
+                <li><p>Countries</p></li>
+                <li><p>Blog</p></li>
+            </ul>
+            <ul>
+                <li><h3>Engage</h3></li>
+                <li><p>LaslesVPN ?</p></li>
+                <li><p>FAQ</p></li>
+                <li><p>Tutorials</p></li>
+                <li><p>About Us</p></li>
+                <li><p>Privacy Policy</p></li>
+                <li><p>Terms of Service</p></li>
+            </ul>
+            <ul>
+                <li><h3>Earn Money</h3></li>
+                <li><p>Affiliate</p></li>
+                <li><p>Become Partner</p></li>
+            </ul>
         </footer>
     </main>
 </body>
